color changes status

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -117,3 +117,11 @@ svg {
   padding-right: 15px;
   margin-top: 10px;
 }
+
+.accepted-green{
+  color: rgb(10, 205, 111);
+}
+
+.rejected-red{
+  color: red;
+}
