--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -84,7 +84,11 @@
             <td scope="col"><%= booking.start_date %> </td>
             <% total_price = ((booking.end_date - booking.start_date).to_i) * @yachts.select { |yacht| yacht.id == booking.yacht_id}[0].price %>
             <td scope="col"> € <%= number_with_delimiter(total_price, :delimiter => ',')  %> </td>
-            <td scope="col"><%= booking.status %> </td>
+            <% if booking.status = "Accepted" %>
+              <td class="accepted-green" scope="col"><%= booking.status %> </td>
+            <% else %>
+              <td class="rejected-red" scope="col"><%= booking.status %> </td>
+            <% end %>
             </tr>
           <%end%>
         </tbody>
