--- a/app/views/yachts/index.html.erb
+++ b/app/views/yachts/index.html.erb
@@ -5,12 +5,7 @@
     <div class="yacht-list-container col-sm-12 col-lg-4">
       <div class="row justify-content-evenly">
 
-        <div>
-        <strong style="color: #333333"><i class="fas fa-wifi"></i>&nbsp &nbsp WIFI</strong>
-        <strong style="color: #333333"><i class="fas fa-utensils"></i>&nbsp &nbsp Restaurant</strong>
-        <strong style="color: #333333"><i class="fas fa-swimming-pool"></i>&nbsp &nbsp Pool</strong>
-        <strong style="color: #333333"><i class="fas fa-hot-tub"></i>&nbsp &nbsp Jacuzzi</strong>
-        </div>
+
         <% if @yachts.length == 0 %>
           <div class="col-12 col-md-6 col-lg-12">
                 <h5 class="card-title text-center">No matches...</h5>
@@ -18,7 +13,7 @@
         <% end %>
         <% @yachts.each do |yacht| %>
         <%= link_to yacht_path(yacht) do %>
-        <div class="col-12 col-md-6 col-lg-12 yachts-card-separation">
+        <div class="col-12 col-md-6 col-lg-12">
           <div class="yacht-card">
             <img src="<%= yacht.image_url %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -48,7 +43,7 @@
       </div>
     <div class="index-map-container col-0 col-8">
       <div class="second-show-card bg-white rounded shadow" id="map-container">
-        <div id="map" style="width: 100%; height: 120vh;"
+        <div id="map" style="width: 100%; height: 900px;"
           data-markers="<%= @markers.to_json %>"
           data-mapbox-api-key="<%= ENV["MAPBOX_API_KEY"] %>">
         </div>
