--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -57,7 +57,7 @@
         <%# PROFILE CARDS %>
         <div class="boat-individual-card">
           <div class="card-body profile-boat-card-body">
-              <img src="<%= @yachts.sample.image_url %>" class="profile-boat-image" alt="...">
+              <img src="<%= @image_url %>" class="profile-boat-image" alt="...">
           </div>
         </div>
       </div>
